# learn-bevy-2d-platformer-game

./: Cargo.toml  README.md
assets/: map.json
src/: animation.rs  main.rs  platforms.rs  player.rs
