[package]
name = "learn-2d-platformer-game-with-bevy"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16.1", features = ["dynamic_linking"] }
bevy_rapier2d = "0.30.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
